--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -121,6 +121,7 @@ allow 109.70.100.68;
 allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
+allow 114.35.245.150;
 allow 118.163.74.160;
 allow 121.127.37.151;
 allow 123.253.35.32;
@@ -183,6 +184,7 @@ allow 154.213.184.9;
 allow 154.213.184.90;
 allow 154.213.184.93;
 allow 154.213.185.133;
+allow 154.213.185.165;
 allow 154.213.185.183;
 allow 154.213.185.185;
 allow 154.213.185.230;
@@ -197,7 +199,6 @@ allow 154.216.18.191;
 allow 154.26.159.157;
 allow 158.69.1.13;
 allow 160.119.249.240;
-allow 161.35.129.51;
 allow 161.97.174.64;
 allow 162.210.173.17;
 allow 162.216.18.62;
@@ -225,6 +226,7 @@ allow 171.25.193.77;
 allow 171.25.193.78;
 allow 171.25.193.79;
 allow 171.25.193.80;
+allow 172.104.208.190;
 allow 172.104.243.155;
 allow 172.105.161.162;
 allow 172.234.228.174;
@@ -289,6 +291,7 @@ allow 185.100.87.250;
 allow 185.100.87.253;
 allow 185.100.87.41;
 allow 185.10.16.41;
+allow 185.106.102.102;
 allow 185.107.57.64;
 allow 185.107.57.65;
 allow 185.107.57.66;
@@ -831,6 +834,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
 allow 2001:ac8:22:43::20e5:a7d7;
+allow 2001:b011:4002:143e::b;
 allow 2001:b030:2422::7234;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bf0:666::666;
@@ -975,7 +979,6 @@ allow 23.155.24.4;
 allow 23.155.8.104;
 allow 23.161.232.50;
 allow 23.173.216.67;
-allow 23.184.48.13;
 allow 23.94.211.25;
 allow 2400:d320:2202:5765::1;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
@@ -994,6 +997,7 @@ allow 2.58.56.90;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:95ff:fe5d:8f00;
+allow 2600:3c03:e000:19f:0:11:11:11;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
@@ -1004,7 +1008,6 @@ allow 2602:2e6:0:4::;
 allow 2602:fc24:12:4870:39ca:318:0:1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
-allow 2602:fc24:18:a378::1;
 allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:2b4::1;
 allow 2602:fc24:19:30::1;
@@ -1276,6 +1279,7 @@ allow 2a05:541:121:33::1;
 allow 2a05:541:122:49::1;
 allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:67c6::1;
+allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6bd4::1;
 allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:12::1;
@@ -1620,6 +1624,7 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
+allow 45.129.84.247;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.137.205.138;
@@ -1853,7 +1858,6 @@ allow 92.246.84.133;
 allow 93.113.25.189;
 allow 93.113.25.221;
 allow 93.123.12.112;
-allow 93.185.165.211;
 allow 93.95.228.125;
 allow 93.95.228.205;
 allow 93.95.230.165;
