--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -184,6 +184,7 @@ set_real_ip_from 154.213.184.9;
 set_real_ip_from 154.213.184.90;
 set_real_ip_from 154.213.184.93;
 set_real_ip_from 154.213.185.133;
+set_real_ip_from 154.213.185.165;
 set_real_ip_from 154.213.185.183;
 set_real_ip_from 154.213.185.185;
 set_real_ip_from 154.213.185.230;
@@ -546,13 +547,11 @@ set_real_ip_from 185.246.128.161;
 set_real_ip_from 185.246.188.149;
 set_real_ip_from 185.246.188.73;
 set_real_ip_from 185.246.188.74;
-set_real_ip_from 185.246.189.130;
 set_real_ip_from 185.246.189.99;
 set_real_ip_from 185.246.86.197;
 set_real_ip_from 185.247.184.105;
 set_real_ip_from 185.247.184.33;
 set_real_ip_from 185.252.232.218;
-set_real_ip_from 185.254.196.141;
 set_real_ip_from 185.34.33.2;
 set_real_ip_from 185.35.202.222;
 set_real_ip_from 185.38.175.133;
@@ -1209,7 +1208,6 @@ set_real_ip_from 2a02:898:218::1;
 set_real_ip_from 2a02:898:218::2;
 set_real_ip_from 2a02:c204:2195:2012::1;
 set_real_ip_from 2a02:c204:2220:8710::1;
-set_real_ip_from 2a02:c206:2095:2624::1;
 set_real_ip_from 2a02:c207:3002:8283::1;
 set_real_ip_from 2a02:ec0:209:10::4;
 set_real_ip_from 2a02:ed06::222;
@@ -1276,6 +1274,7 @@ set_real_ip_from 2a05:541:121:33::1;
 set_real_ip_from 2a05:541:122:49::1;
 set_real_ip_from 2a05:b0c7:6388::1;
 set_real_ip_from 2a05:b0c7:67c6::1;
+set_real_ip_from 2a05:b0c7:6949::1;
 set_real_ip_from 2a05:b0c7:6bd4::1;
 set_real_ip_from 2a06:1280:bee1:2::ee12:230;
 set_real_ip_from 2a06:1700:0:12::1;
@@ -1621,6 +1620,7 @@ set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.129.84.246;
 set_real_ip_from 45.129.84.247;
+set_real_ip_from 45.129.84.249;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.137.205.138;
@@ -1659,7 +1659,6 @@ set_real_ip_from 45.14.165.118;
 set_real_ip_from 45.148.10.111;
 set_real_ip_from 45.148.10.169;
 set_real_ip_from 45.148.17.56;
-set_real_ip_from 45.151.122.34;
 set_real_ip_from 45.61.185.172;
 set_real_ip_from 45.61.186.203;
 set_real_ip_from 45.61.187.200;
@@ -1719,6 +1718,7 @@ set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.100.227;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
@@ -1829,7 +1829,6 @@ set_real_ip_from 89.37.95.34;
 set_real_ip_from 89.58.26.216;
 set_real_ip_from 89.58.41.156;
 set_real_ip_from 91.132.144.59;
-set_real_ip_from 91.139.160.150;
 set_real_ip_from 91.193.18.63;
 set_real_ip_from 91.202.5.104;
 set_real_ip_from 91.203.145.116;
