--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -184,6 +184,7 @@ allow 154.213.184.9;
 allow 154.213.184.90;
 allow 154.213.184.93;
 allow 154.213.185.133;
+allow 154.213.185.165;
 allow 154.213.185.183;
 allow 154.213.185.185;
 allow 154.213.185.230;
@@ -199,7 +200,6 @@ allow 154.216.18.227;
 allow 154.26.159.157;
 allow 158.69.1.13;
 allow 160.119.249.240;
-allow 161.35.129.51;
 allow 161.97.174.64;
 allow 162.210.173.17;
 allow 162.216.18.62;
@@ -694,7 +694,7 @@ allow 195.47.238.84;
 allow 195.47.238.86;
 allow 195.47.238.87;
 allow 195.47.238.89;
-allow 195.47.238.93;
+allow 195.47.238.90;
 allow 195.80.151.242;
 allow 195.88.74.206;
 allow 198.251.84.163;
@@ -1281,6 +1281,7 @@ allow 2a05:541:121:33::1;
 allow 2a05:541:122:49::1;
 allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:67c6::1;
+allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6bd4::1;
 allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:12::1;
@@ -1506,7 +1507,6 @@ allow 2a0f:85c1:356:3238::1;
 allow 2a0f:93c1:26:1f2::9ce5;
 allow 2a0f:9400:7e11:2859::1;
 allow 2a0f:9400:7e11:73bc::1;
-allow 2a0f:9400:7e11:8ba1::1;
 allow 2a0f:9400:7e11:b60::1;
 allow 2a0f:9400:7e11:ce4d::1;
 allow 2a0f:ca80:0:e57f::82e1:3f1b;
@@ -1626,7 +1626,6 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
 allow 45.129.84.247;
-allow 45.129.84.249;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.137.205.138;
@@ -1828,7 +1827,6 @@ allow 89.147.110.82;
 allow 89.147.111.124;
 allow 89.147.111.87;
 allow 89.187.143.31;
-allow 89.213.174.212;
 allow 89.234.157.254;
 allow 89.236.112.100;
 allow 89.37.95.34;
